--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,14 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    
+    <uses-sdk android:minSdkVersion="24" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Indicates that app requires ARCore ("AR Required"). Ensures app is only
+     visible in the Google Play Store on devices that support ARCore.
+    -->
+    <uses-feature android:name="android.hardware.camera.ar" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="yatrikosh"
